--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p id="blockTime">Block Time: 0</p>
   </body>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="/index.js"></script>
 </html>
