--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
   <head>
   </head>
   <body>
-    <p id="elapsed">Elapsed Time: 0</p>
+    <p id="latest">Latest Block: 0</p>
+    <p id="elapsed">In the last 0 seconds</p>
     <p id="totalTx">Total Transactions: 0</p>
     <p id="totalBlocks">Total Blocks: 0</p>
     <p id="txPerSecond">Transactions Per Second: 0</p>
-    <p id="blockTime">Block Time: 0</p>
+    <p id="blockTime">Average Block Time: 0</p>
   </body>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
