Cleanup and add promises

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   </head>
   <body>
     <p id="latest">Latest Block: 0</p>
-    <p id="elapsed">In the last 0 seconds</p>
+    <p id="previous">In the previous 1k blocks</p>
+    <p id="elapsed">Total time elapsed: 0 seconds</p>
     <p id="totalTx">Total Transactions: 0</p>
-    <p id="totalBlocks">Total Blocks: 0</p>
     <p id="txPerSecond">Transactions Per Second: 0</p>
     <p id="blockTime">Average Block Time: 0</p>
   </body>
