Update monitor site with seconds since last block

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           <td id="txPerSecond">Transactions Per Second: 0</td>
           <td id="blockTime">Average Block Time: 0</td>
         </tr>
+        <tr>
+          <td id="sinceLastBlock">Seconds since last block: 0</td>
+        </tr>
       </tbody>
     </table>
   </body>
